--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "nuxt-fontawesome": "^0.4.0",
     "vee-validate": "^3.3.7",
     "vue-good-table": "^2.21.0",
+    "vue-js-modal": "^1.3.31",
+    "vue-quill-editor": "^3.0.6",
     "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "nodemon": "^1.18.9"
   }
 }
