--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "vee-validate": "^3.3.7",
+    "vue-disqus": "^4.0.1",
     "vue-good-table": "^2.21.0",
     "vue-js-modal": "^1.3.31",
     "vue-quill-editor": "^3.0.6",
+    "vue-social-sharing": "^3.0.2",
     "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
