Add some improvement

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nikolius",
   "version": "1.0.0",
-  "description": "My amazing Nuxt.js project",
+  "description": "Nikolius Lau - Personal Webpage",
   "author": "Nikolius Lau",
   "private": true,
   "scripts": {
