--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/toast": "^3.3.1",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cross-env": "^5.2.0",
